# src/api/main.go
@@ -224,11 +224,14 @@ func main() {
 		coinReferenceHandler := handlers.NewCoinReferenceHandler(coinReferenceRepo, coinReferenceSvc, referenceMigrationSvc)
 		coinIntakeSvc := services.NewCoinIntakeService(intakeDraftRepo, coinRepo, agentProxy, settingsSvc)
 		coinIntakeHandler := handlers.NewCoinIntakeHandler(coinIntakeSvc, logger)
+		coinLookupSvc := services.NewCoinLookupService(agentProxy, settingsSvc, logger)
+		coinLookupHandler := handlers.NewCoinLookupHandler(coinLookupSvc, logger)
 		protected.GET("/coins", coinHandler.List)
 		protected.GET("/coins/:id", coinHandler.Get)
 		protected.POST("/coins", coinHandler.Create)
 		protected.POST("/coins/intake/draft", writeRateLimit, coinIntakeHandler.CreateDraft)
 		protected.POST("/coins/intake/commit", writeRateLimit, coinIntakeHandler.CommitDraft)
+		protected.POST("/coins/lookup", writeRateLimit, coinLookupHandler.Lookup)
 		protected.PUT("/coins/:id", coinHandler.Update)
 		protected.GET("/coins/:id/references", coinReferenceHandler.List)
 		protected.POST("/coins/:id/references", coinReferenceHandler.Create)
